--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <div
-  class="fixed w-full backdrop-blur-sm border bg-white/70 py-3 px-6 flex justify-between items-center"
+  class="fixed w-full backdrop-blur-sm border bg-white/70 py-3 px-6 flex justify-between items-center z-[999]"
 >
+  <div
+    class="absolute inset-x-0 top-0 h-1 bg-gradient-to-r from-blue-500 to-red-500"
+  ></div>
   <h1 class="font-bold text-lg">Todo Apps</h1>
   <div>
     <p-button
