--- a/src/app/pages/private/home/home.component.html
+++ b/src/app/pages/private/home/home.component.html
@@ -1,4 +1,7 @@
-<div class="w-full pb-5 grid grid-cols-1 lg:grid-cols-4 gap-4">
+<h1 class="mb-3 font-bold text-lg">
+  Halo, Selamat Datang {{ name ? name : "User" }}
+</h1>
+<div class="pb-5 grid grid-cols-1 lg:grid-cols-4 gap-4">
   <card-todo />
   <card-todo />
   <card-todo />
