feat: update minor

--- a/src/app/pages/common/register/register.component.html
+++ b/src/app/pages/common/register/register.component.html
@@ -10,9 +10,9 @@
     (mouseleave)="onHover()"
     class="w-[98%] lg:w-[60rem] bg-white flex items-center justify-center lg:justify-between gap-4 rounded-md px-7 py-9 lg:py-10 lg:px-12 shadow-md z-10"
   >
-    <div class="w-1/2 hidden lg:block">
+    <div class="w-1/2 hidden lg:flex justify-center items-center">
       <img
-        src="../../../../assets/ilustration/login-auth.svg"
+        src="../../../../assets/ilustration/Sign-up-amico.svg"
         alt="Login Ilustration"
         class="w-96"
       />
