--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,10 @@
   <div
     class="absolute inset-x-0 top-0 h-1 bg-gradient-to-r from-blue-500 to-red-500"
   ></div>
-  <h1 class="font-bold text-lg">Todo Apps</h1>
+  <div class="flex gap-2 justify-center items-center">
+    <img src="../../../../assets/to-do.png" alt="Logo" class="w-7" />
+    <h1 class="font-bold text-lg">Todo Apps</h1>
+  </div>
   <div>
     <p-button
       (onClick)="logout($event)"
