--- a/src/app/components/card-todo/card-todo.component.html
+++ b/src/app/components/card-todo/card-todo.component.html
@@ -3,16 +3,15 @@
 >
   <img
     alt="Card"
-    src="https://primefaces.org/cdn/primeng/images/usercard.png"
+    [src]="todo.image"
+    (error)="handleImageError($event)"
+    class="rounded-t-md h-40 object-center object-cover"
   />
   <div class="p-4 flex flex-col gap-3">
-    <h1 class="font-bold text-lg">Title</h1>
+    <h1 class="font-bold text-lg">{{ todo.title }}</h1>
     <span class="text-sm text-gray-600 font-semibold">17 Februari 2024</span>
     <p class="text-xs text-justify text-gray-800">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, iste
-      aspernatur voluptatem nemo unde consequuntur necessitatibus recusandae
-      maxime nulla explicabo! Quo, ipsum aperiam praesentium nihil ipsa libero.
-      Atque, molestias debitis.
+      {{ todo.content }}
     </p>
     <div class="flex gap-2">
       <p-button
