--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <navbar-user />
-<div class="bg-slate-100 h-screen w-full pt-16">
+<div class="bg-slate-100 min-h-screen h-full w-full pt-16">
   <div class="px-3 md:px-0 md:container mx-auto">
     <router-outlet />
   </div>
