feat: update testing

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
       </li>
     </ul>
     <p-button
-      (onClick)="logout($event)"
+      (onClick)="logoutConfirm($event)"
       icon="pi pi-power-off"
       severity="danger"
       [rounded]="true"
