fix: update bug services

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,14 @@
           >Arsip</a
         >
       </li>
+      <li class="hidden md:block">
+        <a
+          routerLink="/add-todo"
+          routerLinkActive="text-blue-600"
+          class="font-semibold"
+          >Tambah Todo</a
+        >
+      </li>
     </ul>
     <p-button
       (onClick)="logoutConfirm($event)"
