--- a/src/app/pages/private/archive/archive.component.html
+++ b/src/app/pages/private/archive/archive.component.html
@@ -9,9 +9,21 @@
   <app-card-todo-skeleton></app-card-todo-skeleton>
 </div>
 } @else { @if (todos.length) {
-<h1 class="mb-3 font-bold text-lg">
-  Halo, Selamat Datang {{ name ? name : "User" }}
-</h1>
+<div class="mb-4">
+  <h1 class="mb-3 font-bold text-lg">
+    Halo, Selamat Datang {{ name ? name : "User" }}
+  </h1>
+  <div class="p-input-icon-left w-full md:w-[19rem]">
+    <i class="pi pi-search"></i>
+    <input
+      type="text"
+      pInputText
+      [style]="{ width: '100%' }"
+      placeholder="Cari Todo"
+      (model)="(searchValue)"
+    />
+  </div>
+</div>
 <div class="pb-5 grid grid-cols-1 lg:grid-cols-4 gap-4">
   @for (todo of todos; track $index) {
   <card-todo [todo]="todo" />
