--- a/src/app/components/card-todo/card-todo.component.html
+++ b/src/app/components/card-todo/card-todo.component.html
@@ -1,5 +1,7 @@
+<p-confirmDialog [style]="{ width: '25rem' }"></p-confirmDialog>
+
 <div
-  class="bg-white border rounded-lg flex flex-col gap-2 hover:shadow-lg transition-all ease-in-out"
+  class="bg-white w-full lg:w-[19rem] h-96 border rounded-lg flex flex-col gap-2 hover:shadow-lg transition-all ease-in-out"
 >
   <img
     alt="Card"
@@ -7,12 +9,16 @@
     (error)="handleImageError($event)"
     class="rounded-t-md h-40 object-center object-cover"
   />
-  <div class="p-4 flex flex-col gap-3">
-    <h1 class="font-bold text-lg">{{ todo.title }}</h1>
-    <span class="text-sm text-gray-600 font-semibold">17 Februari 2024</span>
-    <p class="text-xs text-justify text-gray-800">
-      {{ todo.content }}
-    </p>
+  <div class="p-4 flex flex-col justify-between h-full gap-3">
+    <div>
+      <h1 class="font-bold text-lg">{{ todo.title }}</h1>
+      <span class="text-sm text-gray-600 font-semibold">{{
+        todo.updatedAt | date : "d MMMM, y"
+      }}</span>
+      <p class="text-xs text-justify text-gray-800">
+        {{ todo.content }}
+      </p>
+    </div>
     <div class="flex gap-2">
       <p-button
         icon="pi pi-send"
@@ -41,8 +47,6 @@
     </div>
   </div>
 </div>
-
-<p-confirmDialog [style]="{ width: '25rem' }"></p-confirmDialog>
 <p-toast></p-toast>
 @if (isLoading) {
 <app-spinner />
